--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<h1> {{title}} </h1>
 
-<hr>
+<!-- <hr>
 
 <p> Welcome to my new World </p>
 
@@ -21,4 +20,8 @@
 <hr>
 <hr>
 
-<app-main-page></app-main-page>
+<app-main-page></app-main-page>-->
+
+ <app-invoice-page></app-invoice-page> 
+
+<!--<app-list-products></app-list-products>> -->
